<resources>
    <string name="app_name">Aplikasi REST</string>
    <string name="label_id">Id</string>
    <string name="label_name">Nama</string>
    <string name="label_position">Posisi</string>
    <string name="label_salary">Gaji</string>
    <string name="dot">:</string>
    <string name="error">Error</string>
    <string name="add">Tambah</string>
    <string name="update">Ubah</string>
    <string name="delete">Hapus</string>
    <string name="title_update">Ubah Karyawan</string>
    <string name="title_add">Tambah Karyawan</string>
</resources>