<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/text_label_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/input_id"
        android:text="@string/label_id"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/text_label_id"
        tools:text="1" />

    <TextView
        android:id="@+id/text_label_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:labelFor="@id/input_name"
        android:text="@string/label_name"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/input_id" />

    <EditText
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/text_label_name"
        tools:text="@tools:sample/lorem/random" />

    <TextView
        android:id="@+id/text_label_position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:labelFor="@id/input_position"
        android:text="@string/label_position"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/input_name" />

    <EditText
        android:id="@+id/input_position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/text_label_position"
        tools:text="Bos" />

    <TextView
        android:id="@+id/text_label_salary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:labelFor="@id/input_salary"
        android:text="@string/label_salary"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/input_position" />

    <EditText
        android:id="@+id/input_salary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/text_label_salary"
        tools:text="100000000000" />

    <Button
        android:id="@+id/button_add_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/update"
        app:layout_constraintTop_toBottomOf="@id/input_salary" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>